--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <p><a href="./index.html">webstudio</a></p>
+        <a href="./index.html">webstudio</a>
 
         <nav>
             <ul>
@@ -18,10 +18,11 @@
             </ul>
         </nav>
 
-        <div>
-            <p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p>
-            <p><a href="tel:+110001111111">+11 (000) 111-11-11</a></p>
-        </div>
+        <ul>
+            <li><p><a href="mailto:info@devstudio.com">info@devstudio.com</a></p></li>
+            <li><p><a href="tel:+110001111111">+11 (000) 111-11-11</a></p></li>
+        </ul>
+    
     </header>
 
     <main>
@@ -93,7 +94,7 @@
     </main>
 
     <footer>
-        <p><a href="./index.html">webstudio</a></p>
+        <a href="./index.html">webstudio</a>
         <p>Increase the flow of customers and sales for your business with digital
              marketing & growth solutions.</p>
     </footer>
